<resources>
    <string name="app_name">TrabalhoPratico</string>
    <string name="hint_word">Title</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Note not saved because it is empty.</string>
    <string name="add_note">Add Note</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_activity_maps">Map</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="username">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="Loggedin">Remain Logged in</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="login_Error">Invalid Credentials</string>
    <string name="EmptyFields">Empty Fields. Please fill them with your username and password</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="Register_Success">Registration successful</string>
    <string name="filter">Closer</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="PersonalNotes">Personal Notes</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="Edit_error">You cannot edit that note</string>
    <string name="Edit_note">Edit Note</string>
    <string name="Delete_note">Delete Note</string>
    <string name="MyReports">My Reports</string>
    <string name="edited_note">Note has been edited</string>
    <string name="Deleted_Note">Note has been deleted</string>
    <string name="Sucess_Register">Successefully registered</string>
    <string name="Loading_Notes">Loading Notes</string>
    <string name="Filter_Users">Showing only users marks</string>
    <string name="Filter">Showing closer markers</string>
    <string name="No_Changes">No changes have been made</string>

</resources>