<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/buttonNotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="200dp"
        android:onClick="onClickNotas"
        android:text="@string/PersonalNotes"
 />

    <Button
        android:id="@+id/buttonDefinitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_marginTop="70dp"
        android:layout_toRightOf="@id/buttonNotas"
        android:onClick="onClickDefinitions"
        android:text="@string/Settings"
 />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_toRightOf="@id/buttonNotas"
        android:onClick="onClickLogin"
        android:text="@string/Logout"
/>

    <Button
        android:id="@+id/buttonMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonNotas"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="70dp"
        android:onClick="onClickMap"
        android:text="@string/title_activity_maps"
 />






</RelativeLayout>